SERVER-42014 repairDatabase should catch and report exceptions from repairCollections before re-opening the database